updates the cookie code ref

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <div class="large-12 cell">
         <h2>Cookie Parser</h2>
         Paste your cookie below. Obtain it by entering
-        <code>cookieStore.getAll().then((a)=>console.log(JSON.stringify(a)))</code> in your dev toolbar.
+        <code>document.cookie</code> in your dev toolbar.
         <textarea rows="10"></textarea><br />
         <button type="button" class="success button" id="doit_btn">Parse It</button><br /><br />
 
